--- a/styles/style.css
+++ b/styles/style.css
@@ -225,3 +225,37 @@ html {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/*this sheet will have all the css for the whole sheet, so the wrapper, the font family if it's consistent, etc.*/
+html {
+  font-family: "poppins", sans-serif;
+}
+
+header {
+  height: 100vh;
+  background-image: url("./../assets/home.jpg");
+  background-size: cover;
+}
+
+ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+}
+ul li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+ul li a {
+  display: inline-block;
+  padding: 15px 40px 10px 40px;
+  font-size: 1.75rem;
+  text-align: center;
+  width: 100%;
+}
+
+/*&nav a:hover {
+  border: 4px solid #fff;
+}*/
