--- a/styles/sass/partials/_html.scss
+++ b/styles/sass/partials/_html.scss
@@ -3,6 +3,17 @@
 $primary: #333;
 
 html {
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins, Medium", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color:  $primary;
+  margin: 0;
+  padding: 0;
+
+}
+
+.wrapper {
+
+ max-width: 1080px;
 
 }
