--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -3,25 +3,24 @@
 @use './partials/header';
 
 
-ul {
-    display: flex;
-    text-decoration: none;
-        li {
-        flex: 1 0 auto;
-        
-          a {
-            display: inline-block;
-            padding: 15px 40px 10px 40px;
-            font-size: 1.75rem;
-            
-            text-align: center;
-            width: 100%;
-        }
-    }
-  }
 
 
 
-/*&nav a:hover {
-  border: 4px solid #fff;
+/*
+
+featured sale
+
+  .prod {
+  width: 300px;
+  height: 50px;
+  padding: 10px;
+  color: #f8a;
+}
+
+.prod 1 {
+  color: #pink;
+}
+.prod 3 {
+  color: #blue;
+}
 }*/
