--- a/styles/style.css
+++ b/styles/style.css
@@ -228,7 +228,16 @@ html {
 
 /*this sheet will have all the css for the whole sheet, so the wrapper, the font family if it's consistent, etc.*/
 html {
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins, Medium", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  max-width: 1080px;
 }
 
 header {
@@ -237,25 +246,105 @@ header {
   background-size: cover;
 }
 
-ul {
+.navBar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  text-decoration: none;
-}
-ul li {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-}
-ul li a {
-  display: inline-block;
-  padding: 15px 40px 10px 40px;
-  font-size: 1.75rem;
-  text-align: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fff;
+  height: 85px;
   width: 100%;
+  padding: 0 60px;
 }
 
-/*&nav a:hover {
-  border: 4px solid #fff;
+.logo {
+  cursor: pointer;
+}
+
+.menu li {
+  display: inline;
+}
+.menu li a {
+  float: left;
+  padding: 12px;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.navBar a:hover {
+  border-bottom-width: 4px;
+  border-bottom-color: #333;
+  border-bottom-style: ridge;
+}
+
+.checkout {
+  cursor: pointer;
+}
+
+.about {
+  padding-left: 20%;
+  padding-right: 60%;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+p {
+  font-size: 0.75rem;
+  line-height: 1.25;
+  font-family: "poppins, regular", sans-serif;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+/*
+
+featured sale
+
+  .prod {
+  width: 300px;
+  height: 50px;
+  padding: 10px;
+  color: #f8a;
+}
+
+.prod 1 {
+  color: #pink;
+}
+.prod 3 {
+  color: #blue;
+}
 }*/
