--- a/styles/sass/partials/_html.scss
+++ b/styles/sass/partials/_html.scss
@@ -1,19 +1,12 @@
-/*this sheet will have all the css for the whole sheet, so the wrapper, the font family if it's consistent, etc.*/
+/*this sheet will have all the styling for the whole sheet, so the wrapper, the font family if it's consistent, etc.*/
 
-$primary: #333;
 
 html {
-  font-family: "Poppins, Medium", sans-serif;
+  font-family: $headingFont
   font-size: 20px;
   font-weight: 500;
   color:  $primary;
   margin: 0;
   padding: 0;
-
-}
-
-.wrapper {
-
- max-width: 1080px;
 
 }
