--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,26 +1,6 @@
 @use './partials/setup';
+@use './partials/variables';
 @use './partials/html';
 @use './partials/header';
-
-
-
-
-
-/*
-
-featured sale
-
-  .prod {
-  width: 300px;
-  height: 50px;
-  padding: 10px;
-  color: #f8a;
-}
-
-.prod 1 {
-  color: #pink;
-}
-.prod 3 {
-  color: #blue;
-}
-}*/
+@use './partials/sections';
+@use './partials/footer';
