--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,10 +1,5 @@
-/* site text styles */
-$headingFont: "Poppins, Medium";
-$bodyFont: "Poppins, Regular";
+/* _variables site colour palette */
 
-
-
-/* site colour palette */
 $primary: #333; 
 $secondary: #fff; 
 $sale: #eba6aa; 
