--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,95 +1,86 @@
-@use './html';
+@import "./variables";
 
 header {
+
   height: 100vh;
-  background-image: url('./../assets/home.jpg');
-  background-size: cover;
-  
-
-
-}
-
-nav {
-  position: fixed;
-  top: 0;
   width: 100%;
+  background-image: url('./../assets/home.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+
+
+
 }
 
-.navBar {
-  
+.topBar {
+  background-color: $secondary;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
-  height: 85px;
-  width: 100%;
-  padding: 0 60px;
-}
-
-.logo {
-  cursor: pointer;
+  padding-left: 60px;
+  padding-right: 60px;
 
 }
 
-nav {
+.novasLogo {
 
-      li {
-        display: inline;
-        justify-content: center;
-        align-items: center;
-                
+  height: 25px;
+  width: 125px;
 
+}
+
+nav ul {
+  display: flex;
+
+
+
+  
+    li {
+      padding-right: 30px;
+      
+   
         a {
-         
-          color: #333;
-          padding: 12px;
-          font-size: .75rem;
+          color: $primary;
           text-decoration: none;
+          font-size: .75rem;
+          font-weight: 500;
 
-
+          }
         }
-    }
-  }
+      }
 
-.menu a:hover {
-  border-bottom-width: 4px;
-  border-bottom-color: #333;
-
-  
-
-}
-
-.checkout {
-  cursor: pointer;
-
-}
-
-.about {
-
-
-  padding-left: 20%;
-  padding-right: 60%;
-  
+.cartIcon {
+  height: 30px;
+  width: 30px;
 }
 
 h1 {
-  font-size: 2.5rem;
-  font-weight: 500;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+  font-size: 3rem;
+  font-family: "poppins";
+  font-weight: 500; /*font-weight set h1 heading is too bold for the design*/
+  padding: 80px 800px 0 300px;
+  margin-bottom: 0;
 
 }
 
 p {
   font-size: 0.75rem;
   line-height: 1.25;
-  font-family: "poppins, regular", sans-serif;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-family: "poppins";
+  font-weight: 400;
+
+  padding: 0 750px 0 300px;
 }
+
+/*@media (max-width: 768px) {
+  header {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+}*/
