--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,6 @@
-@use './partials/setup';
-@use './partials/variables';
-@use './partials/html';
-@use './partials/header';
-@use './partials/sections';
-@use './partials/footer';
+@use "./partials/setup";
+@use "./partials/typography";
+@use "./partials/header";
+@use "./partials/sections";
+@use "./partials/footer";
+
