--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,3 +1,8 @@
+/*$bodyFont: */
+
+/*$headingFont: "Young Serif";
+$bodyFont: "Jakarta Sans";*/
+
 /* _variables site colour palette */
 
 $primary: #333; 
