--- a/styles/style.css
+++ b/styles/style.css
@@ -226,7 +226,10 @@ html {
   overflow: hidden;
 }
 
-/*this sheet will have all the styling for the whole sheet, so the wrapper, the font family if it's consistent, etc.*/ /* _variables site colour palette */
+/*this sheet will have all the styling for the whole sheet, so the wrapper, the font family if it's consistent, etc.*/ /*$bodyFont: */
+/*$headingFont: "Young Serif";
+$bodyFont: "Jakarta Sans";*/
+/* _variables site colour palette */
 html {
   font-family: "poppins";
   font-weight: 400px;
@@ -240,6 +243,15 @@ ul {
   list-style: none;
 }
 
+.wrapper {
+  max-width: 1260px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+/*$bodyFont: */
+/*$headingFont: "Young Serif";
+$bodyFont: "Jakarta Sans";*/
 /* _variables site colour palette */
 header {
   height: 100vh;
@@ -247,6 +259,9 @@ header {
   background-image: url("./../assets/home.jpg");
   background-size: contain;
   background-repeat: no-repeat;
+}
+header.contactHeader {
+  background-image: url("./../assets/contact-us.jpg");
 }
 
 .topBar {
@@ -260,8 +275,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding: 5px 60px;
 }
 
 .novasLogo {
@@ -283,6 +297,15 @@ nav ul li a {
   font-size: 0.75rem;
   font-weight: 500;
 }
+nav ul li a:hover {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 50px;
+  height: 1px;
+  background: #333;
+}
 
 .cartIcon {
   height: 30px;
@@ -290,6 +313,7 @@ nav ul li a {
 }
 
 h1 {
+  display: block;
   font-size: 3rem;
   font-family: "poppins";
   font-weight: 500; /*font-weight set h1 heading is too bold for the design*/
@@ -302,21 +326,20 @@ p {
   line-height: 1.25;
   font-family: "poppins";
   font-weight: 400;
-  padding: 0 750px 0 300px;
+  padding: 0 850px 0 300px;
 }
 
-/*@media (max-width: 768px) {
-  header {
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-  }
+.contactContent h1 {
+  font-size: 2rem;
+  font-family: "poppins";
+  font-weight: 500; /*font-weight set h1 heading is too bold for the design*/
+}
 
-  nav ul {
-    flex-direction: column;
-  }
-}*/
 /*Categories*/
+main section {
+  margin-bottom: 90px;
+}
+
 .categoryGallery {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -324,17 +347,47 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-.categoryGallery img {
-  height: 400px;
-  width: 250px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.plants h3 {
-  background: #eba6aa;
-  color: #fff;
-  font-size: small;
-  padding: 5px;
+.cat {
+  margin: 0;
+}
+
+.cat img {
+  height: 400px;
+  width: 100%;
+}
+
+.catOne {
+  position: relative;
+  margin-right: 30px;
+}
+
+.catTwo {
+  position: relative;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.catThree {
+  position: relative;
+}
+
+.cat h3 {
+  position: absolute;
+  bottom: 20px;
+  font-size: 12px;
+  margin: 0;
+}
+
+.cat h3 span {
+  background: #fff;
+  color: #333;
+  font-weight: 400;
+  padding: 5px 10px;
 }
 
 /*Featured Sale*/
@@ -459,6 +512,224 @@ p {
 
 }*/
 footer {
-  background-color: #333;
-  color: #fff;
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 40px 80px;
+  background: lightgrey;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
+
+footer .footerFlexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+footer .footerFlexContainer h2 {
+  position: relative;
+  color: #333;
+  font-size: 30px;
+  font-weight: 500px;
+  margin-bottom: 15px;
+}
+
+footer .footerFlexContainer .sec {
+  margin-right: 30px;
+}
+
+footer .footerFlexContainer .sec.footerAbout {
+  width: 40%;
+}
+
+footer .footerFlexContainer .sec.footerAbout img {
+  position: relative;
+  height: 26px;
+  width: 125px;
+  margin-bottom: 15px;
+}
+
+footer .footerFlexContainer .sec.footerAbout p {
+  color: #333;
+}
+
+.icon {
+  margin-top: 20 px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.icon li a {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  background: lightgrey;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+
+.icon li a:hover {
+  background-color: pink;
+}
+
+.footerContact {
+  position: relative;
+  width: 25%;
+}
+
+.footerContact ul li a {
+  color: pink;
+  margin-bottom: 10px;
+}
+
+.footerContact ul li a:hover {
+  color: magenta;
+}
+
+.footerContact {
+  width: calc(35% - 60px);
+  margin-right: 0 !important;
+}
+
+.footerContact .info {
+  position: relative;
+}
+
+.footerContact .info li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.footerContact .info li span:nth-child(1) {
+  color: peru;
+  font-size: 1rem;
+  margin-right: 10px;
+}
+
+.footerContact .info li span {
+  color: #333;
+}
+
+.footerContact .info li a {
+  color: #333;
+  text-decoration: none;
+}
+
+.footerContact .info li a:hover {
+  color: magenta;
+}
+
+/*nav {
+  display: flex;
+  justify-content: space-between;
+
+        ul { 
+            width: 33%;
+
+          a {
+            color: green;
+            font-size: 0.8rem;
+            line-height: 1.5rem;
+
+            &:hover {
+              color: magenta;
+
+            &:focus {
+              color: magenta;
+            }
+
+          }
+
+        }
+
+      }
+
+    }
+
+
+.footerAbout li a {
+  display: inline-block
+}
+
+.footerAbout img {
+
+  height: 26px;
+  width: 125px;
+
+}
+
+
+
+.footerContact a img {
+  height: 10px;
+  width: 10px;
+
+}
+
+
+
+
+.footerProfile a img {
+  height: 10px;
+  width: 10px;
+
+}
+
+.footerNewsletter {
+  display: flex;
+  flex-direction: column;
+
+      li{ font-size: 0.5rem;
+
+      }
+
+
+
+
+
+
+
+
+
+input[type=text] {
+  background-color: lightgray;
+outline: 0;
+border-width: 0 0 1px;
+border-color: #333;
+  width: 100%;
+
+  margin: 12px 0 20px;
+  box-sizing: border-box;
+}
+
+::placeholder {
+  font-size: 0.5rem;
+}*/
