--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,7 +1,225 @@
-footer {
 
-  background-color: #333;
-  color: #fff;
+
+footer {
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 40px 80px;
+  background: lightgrey;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ 
+}
+
+
+footer .footerFlexContainer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: row;
 
 }
 
+footer .footerFlexContainer h2 {
+  position: relative;
+  color: #333;
+  font-size: 30px;
+  font-weight: 500px;
+  margin-bottom: 15px;
+}
+
+
+footer .footerFlexContainer .sec {
+  margin-right: 30px;
+}
+
+footer .footerFlexContainer .sec.footerAbout {
+    width: 40%;
+}
+
+
+
+footer .footerFlexContainer .sec.footerAbout img {
+  position: relative;
+  height: 26px;
+  width: 125px;
+  margin-bottom: 15px;
+}
+
+footer .footerFlexContainer .sec.footerAbout p {
+
+  color:#333;
+
+}
+
+.icon {
+  margin-top: 20 px;
+  display: flex;
+
+}
+
+.icon li a {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  background: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  border-radius: 4px;
+
+
+}
+
+.icon li a:hover {
+  background-color: pink;
+
+}
+
+
+.footerContact {
+  position: relative;
+  width: 25%;
+
+
+}
+
+.footerContact ul li a {
+  color: pink;
+  margin-bottom: 10px;
+
+}
+
+
+.footerContact ul li a:hover {
+  color: magenta;
+  
+}
+
+.footerContact {
+
+  width: calc(35% - 60px);
+  margin-right: 0 !important;
+}
+
+.footerContact .info {
+position: relative;
+
+}
+
+.footerContact .info li {
+  display: flex;
+  margin-bottom: 16px;
+  
+  }
+
+  .footerContact .info li span:nth-child(1) {
+    color: peru;
+    font-size: 1rem;
+    margin-right: 10px;
+
+  }
+
+  .footerContact .info li span {
+    color:#333;
+  }
+
+
+  .footerContact .info li a {
+    color: #333;
+    text-decoration: none;
+  }
+
+  .footerContact .info li a:hover {
+    color: magenta;
+  }
+
+
+/*nav {
+  display: flex;
+  justify-content: space-between;
+        
+        ul { 
+            width: 33%;
+        
+          a {
+            color: green;
+            font-size: 0.8rem;
+            line-height: 1.5rem;
+
+            &:hover {
+              color: magenta;
+
+            &:focus {
+              color: magenta;
+            }
+                        
+          }
+
+        }
+
+      }
+
+    }
+
+
+.footerAbout li a {
+  display: inline-block
+}
+
+.footerAbout img {
+
+  height: 26px;
+  width: 125px;
+
+}
+
+
+
+.footerContact a img {
+  height: 10px;
+  width: 10px;
+
+}
+
+
+
+
+.footerProfile a img {
+  height: 10px;
+  width: 10px;
+
+}
+
+.footerNewsletter {
+  display: flex;
+  flex-direction: column;
+  
+      li{ font-size: 0.5rem;
+
+      }
+
+
+
+
+
+
+
+
+
+input[type=text] {
+  background-color: lightgray;
+outline: 0;
+border-width: 0 0 1px;
+border-color: #333;
+  width: 100%;
+
+  margin: 12px 0 20px;
+  box-sizing: border-box;
+}
+
+::placeholder {
+  font-size: 0.5rem;
+}*/
