--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -8,17 +8,22 @@ header {
   background-size: contain;
   background-repeat: no-repeat;
 
+        &.contactHeader {
+          
+            background-image: url('./../assets/contact-us.jpg');
 
 
-}
+        }
+    }
+
 
 .topBar {
   background-color: $secondary;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding: 5px 60px;
+
 
 }
 
@@ -32,8 +37,6 @@ header {
 nav ul {
   display: flex;
 
-
-
   
     li {
       padding-right: 30px;
@@ -45,6 +48,17 @@ nav ul {
           font-size: .75rem;
           font-weight: 500;
 
+          &:hover {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 50px;
+            height: 1px;
+            background: #333;
+
+          }
+
           }
         }
       }
@@ -55,32 +69,32 @@ nav ul {
 }
 
 h1 {
-
+  display: block;
   font-size: 3rem;
   font-family: "poppins";
   font-weight: 500; /*font-weight set h1 heading is too bold for the design*/
   padding: 80px 800px 0 300px;
   margin-bottom: 0;
 
+
+
 }
+
 
 p {
   font-size: 0.75rem;
   line-height: 1.25;
   font-family: "poppins";
   font-weight: 400;
-
-  padding: 0 750px 0 300px;
+  padding: 0 850px 0 300px;
 }
 
-/*@media (max-width: 768px) {
-  header {
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-  }
 
-  nav ul {
-    flex-direction: column;
-  }
-}*/
+.contactContent h1 {
+  font-size: 2rem;
+  font-family: "poppins";
+  font-weight: 500; /*font-weight set h1 heading is too bold for the design*/
+
+
+
+}
